# wagtail-tinymce-table

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  apps.py  azure-pipelines.yml  blocks.py  pyproject.toml  widgets.py
.github/workflows/: ci.yml  publish.yml
azure-pipelines/templates/: test-steps.yml
core/: table_block.py
static/wagtailtinymce/js/: tinymce-adapter.js
tests/: conftest.py  test_replace_cell_text.py  test_table_block.py  test_tinymce_block.py
