[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-tinymce"
version = "0.2.3"
description = "TinyMCE-powered StreamField blocks for Wagtail, including a table block with Excel paste support."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "wagtail>=4.0",
    # Django is a transitive dependency via wagtail but we pin an explicit
    # minimum to ensure no known-vulnerable version is resolved.
    # 4.2.15 is the first 4.2 LTS release with all CVEs through mid-2024 fixed.
    # 5.0.x users should be on >=5.0.11 (CVE-2024-53907/53908 fixed there).
    "django>=4.2.15",
    "django-tinymce>=5.0",
    "bleach[css]>=6.0,<7",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "wagtail-localize>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pip-audit",
]

[project.urls]
Repository = "https://github.com/your-org/wagtail-tinymce"

[tool.setuptools]
packages = ["wagtailtinymce", "wagtailtinymce.core"]

[tool.setuptools.package-dir]
"wagtailtinymce" = "."
"wagtailtinymce.core" = "core"

[tool.setuptools.package-data]
"wagtailtinymce" = ["static/**/*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
# pytest-django requires DJANGO_SETTINGS_MODULE or inline config;
# Django is configured programmatically in tests/conftest.py instead.
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
