[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-tinymce-table"
version = "0.3.0"
description = "TinyMCE-powered StreamField blocks for Wagtail, including a table block with Excel paste support."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "wagtail>=4.0",
    # Django is a transitive dependency via wagtail but we pin an explicit
    # minimum to ensure no known-vulnerable version is resolved.
    # 4.2.15 is the first 4.2 LTS release with all CVEs through mid-2024 fixed.
    # 5.0.x users should be on >=5.0.11 (CVE-2024-53907/53908 fixed there).
    "django>=4.2.15",
    "django-tinymce>=5.0",
    "bleach[css]>=6.0,<7",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    # 1.5 is the minimum that introduced the segment protocol we depend on.
    # Wagtail 7.x requires wagtail-localize >=1.12 (first release supporting
    # Wagtail 7); pip resolves the correct version automatically.
    "wagtail-localize>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pip-audit",
]

[tool.poetry]
name = "wagtail-tinymce"
version = "0.3.0"
description = "TinyMCE-powered StreamField blocks for Wagtail, including a table block with Excel paste support."
authors = []
packages = [{include = "wagtailtinymce"}]

[project.urls]
Repository = "https://github.com/ogcio/wagtail-tinymce-table"

# ---------------------------------------------------------------------------
# [tool.poetry] — identity block for Poetry compatibility
#
# Poetry < 1.5 does not read the standard [project] (PEP 621) section when
# resolving git dependencies; it only looks for [tool.poetry] to get the
# package name.  Without this block those versions raise:
#   "Unable to create package with no name"
#
# NOTE: the build backend is still setuptools (see [build-system] above).
# [tool.poetry] here is read-only metadata for Poetry's resolver — Poetry
# does NOT use it to build or install the package.  The authoritative
# package discovery config remains [tool.setuptools] below.
# ---------------------------------------------------------------------------
[tool.poetry]
name = "wagtail-tinymce-table"
version = "0.3.0"
description = "TinyMCE-powered StreamField blocks for Wagtail, including a table block with Excel paste support."
authors = []

[tool.setuptools]
packages = ["wagtailtinymce", "wagtailtinymce.core"]

[tool.setuptools.package-dir]
"wagtailtinymce" = "."
"wagtailtinymce.core" = "core"

[tool.setuptools.package-data]
"wagtailtinymce" = ["static/**/*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
# pytest-django requires DJANGO_SETTINGS_MODULE or inline config;
# Django is configured programmatically in tests/conftest.py instead.
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
